<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/match_layout"
        android:orientation="vertical">

        <LinearLayout
            style="@style/wrap_layout"

            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_item"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_broken_image_black" />

            <LinearLayout
                style="@style/wrap_layout"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/default_layout"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_item_name"
                        style="@style/wrap_layout"
                        android:text="@string/name"
                        android:textColor="@color/blue"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    style="@style/default_layout"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tv_Item_duration"
                        style="@style/wrap_layout"
                        android:text="@string/duration"
                        android:textColor="@color/blue"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    style="@style/default_layout"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/wrap_layout"
                        android:text="@string/category"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_category"
                        style="@style/wrap_layout"
                        android:text="@string/categorys"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    style="@style/default_layout"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/wrap_layout"
                        android:text="@string/user_score"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_Item_score"
                        style="@style/wrap_layout"
                        android:text="@string/score"
                        android:textColor="@color/green"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <TextView
            style="@style/wrap_layout"
            android:layout_margin="20dp"
            android:text="@string/description"
            android:textSize="24sp"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_desc"
            style="@style/wrap_layout"
            android:layout_marginStart="20dp"
             android:layout_marginBottom="5dp"
            android:text="@string/long_description"
            android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/wrap_layout"
                android:layout_margin="20dp"
                android:text="@string/released_date"
                android:textSize="24sp"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_date"
                style="@style/wrap_layout"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/moviedate"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/wrap_layout"
                android:layout_margin="20dp"
                android:text="@string/creator"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/blue"/>

            <TextView
                android:id="@+id/tv_Item_creator"
                style="@style/wrap_layout"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/creatorname"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
